<resources>
    <string name="app_name">PokeForge</string>
    <string name="title_pokemons">Pokémons</string>
    <string name="title_shop">Boutique</string>
    <string name="title_fusion">Fusion</string>
    <string name="poids">Poids</string>
    <string name="taille">Taille</string>
    <string name="suivant">Suivant</string>
    <string name="retour"><![CDATA[< Retour]]></string>
    <string name="pokepiece">pokepiece</string>
    <string name="_99999">99999</string>
    <string name="pokemon_sprite">pokemon sprite</string>
    <string name="first_type">first type</string>
    <string name="second_type">second type</string>
    <string name="statistiques">Statistiques</string>
    <string name="pv">PV:</string>
    <string name="x">x</string>
    <string name="attaque">Attaque:</string>
    <string name="attaque_sp">Attaque spé:</string>
    <string name="vitesse">Vitesse:</string>
    <string name="d_fense">Défense:</string>
    <string name="d_fense_sp">Défense spé:</string>
    <string name="aucun_joueur_proximit">Aucun joueur à proximité.</string>
    <string name="valider">Valider</string>
    <string name="choisissez_un_pokemon_fusionner">Choisissez un pokemon à fusionner</string>
    <string name="second_pokemon_sprite">second pokemon sprite</string>
    <string name="first_pokemon_sprite">first pokemon sprite</string>
    <string name="fusionner_mes_pokemons">Fusionner mes pokemons</string>
    <string name="fusionner_avec_un_ami">Fusionner avec un ami</string>
    <string name="joueur">Joueur</string>
    <string name="pok_pi_ce">Poképièce</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="suprimmer">Suprimmer</string>
    <string name="supprimer">Supprimer</string>
    <string name="fusion_locale">Fusion locale</string>
    <string name="fusion_a_distance">Fusion a distance</string>
    <string name="voici_des_pok_mons_que_vous_pourrez_obtenir">Voici des pokémons que vous pourrez obtenir</string>
    <string name="vous_avez_achet_un_nouvel_oeuf">Vous avez acheté un nouvel oeuf !</string>
    <string name="superBien">Super !</string>
    <string name="button_valider">Button valider</string>
    <string name="s_lectionnez_un_avatar">Sélectionnez un avatar</string>
    <string name="view_profile">View Profile</string>
    <string name="bienvenue_sur_pokeforge">Bienvenue sur PokeForge</string>
    <string name="choisissez_votre_starter">Choisissez votre starter</string>
    <string name="nom_du_joueur">Nom du joueur</string>
    <string name="red">Red</string>
    <string name="changer_d_avatar">Changer d\'avatar</string>
    <string name="commencer_l_aventure">Commencer l\'aventure</string>
    <string name="image_du_personnage">image du personnage</string>
    <string name="revenu">Revenu</string>
    <string name="m">/m</string>
    <string name="evoluer">Evoluer</string>
    <string name="button_evoluer">button evoluer</string>
    <string name="ajouter_aux_pok_mons">Ajouter aux pokémons</string>
    <string name="button_ajouter">button ajouter</string>
    <string name="image_du_pokemon">image du pokemon</string>
    <string name="vous_avez_un_nouvel_uf">Vous avez un nouvel œuf !</string>
    <string name="recuperer_les_pokepeces">recuperer les pokepeces</string>
    <string name="r_cup_rer">Récupérer</string>
    <string name="button_deconnecter">button deconnecter</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="pseudo">Pseudo</string>
    <string name="niveau">Niveau</string>
    <string name="button">Button</string>
    <string name="boutique">boutique</string>
    <string name="button_pour_acheter">button pour acheter</string>
    <string name="pok_mon">Pokémon</string>
    <string name="per_m">/m</string>
    <string name="_100">100</string>
    <string name="image_de_pokepiece">image de pokepiece</string>
    <string name="button_recuperer">button recuperer</string>
    <string name="image_oeuf">image oeuf</string>
    <string name="vous_avez_obtenu_un_oeuf">Vous avez obtenu un oeuf !</string>
    <string name="voulez_vous_renommer_ce_pok_mon">Voulez-vous renommer ce pokémon ?</string>
    <string name="nom_du_pokemon">nom du pokemon</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="button_register">button register</string>
    <string name="button_connecter">button connecter</string>
</resources>