<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_poke"
        android:title="@string/title_pokemons" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_fusion"
        android:title="@string/title_fusion" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="Maps" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/baseline_face_24"
        android:title="Profile" />

</menu>