<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pokeforge.ui.home.HomeFragment"
        android:label="@string/title_pokemons"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pokeforge.ui.dashboard.DashboardFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pokeforge.ui.fusion.FusionFragment"
        android:label="@string/title_fusion"
        tools:layout="@layout/fragment_fusion" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.pokeforge.ui.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>