<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:background="@drawable/bg_poke"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/retour"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <!--<Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/suivant"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            android:id="@+id/buttonNext"
            android:layout_weight="1"
            android:layout_margin="8dp"/>-->

    </LinearLayout>

    <ImageView
        android:id="@+id/pokemon_sprite"
        android:layout_width="255dp"
        android:layout_height="170dp"
        android:contentDescription="@string/pokemon_sprite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_pokemons"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_sprite" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name">

        <ImageView
            android:id="@+id/pokemon_type_sprite_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/first_type"
            android:maxWidth="70dp"
            android:maxHeight="70dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_home_black_24dp" />

        <ImageView
            android:id="@+id/pokemon_type_sprite_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:contentDescription="@string/second_type" />




    </LinearLayout>

    <TextView
        android:id="@+id/pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/black"
        android:text="@string/poids"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Revenu"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ImageView
            android:id="@+id/pokemon_type_sprite_"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/second_type"
            android:maxWidth="70dp"
            android:maxHeight="70dp"
            android:padding="5dp"
            android:src="@drawable/pokepiece" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/m"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/pokemon_type_sprite_"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistiques"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_weight" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pv"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/stat_pv_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/x"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/stat_pv_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/x"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/stat_pv_def_spe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/x"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/stat_pv_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/x"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/stat_pv_attack_spe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:text="@string/x"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/stat_pv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/x"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:text="@string/attaque"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:text="@string/attaque_sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="64dp"
        android:text="@string/vitesse"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/d_fense"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/d_fense_sp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/black"
        android:text="@string/taille"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageButton
        android:id="@+id/evolve_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="Evoluer"
        android:background="@drawable/btn_evo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


</androidx.constraintlayout.widget.ConstraintLayout>